samples/_failures_safe/1761500056_41673f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72a2b77e.c: In function ‘main’:
./samples/SAFE/__tmp_72a2b77e.c:163:28: error: missing terminating " character
  163 |                     printf("\nMatrix Addition Result
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_72a2b77e.c:163:21: error: expected expression at end of input
  163 |                     printf("\nMatrix Addition Result
      |                     ^~~~~~
./samples/SAFE/__tmp_72a2b77e.c:163:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72a2b77e.c:163:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72a2b77e.c:163:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72a2b77e.c:163:21: error: expected declaration or statement at end of input
